# whimsy

./: .agignore  .csslintrc  .gitignore  .jpmignore  .jshintrc  Cargo.toml  Gruntfile.js  README.md  WebExtension Notes.md  bundle.js  checklinks.py  getimages.py  gulpfile.js  index.html  index.js  manifest.json  package-lock.json  package.json  stats.html  thumbnail-gifs.txt  urlbar-sayings.txt  volofile
api/: api.js  schema.json
background-scripts/: background.js  initialize.js  mario.js
data/: audio-content.js  blank.css  cat-spinner.css  hamburger.css  lionel.css  newtabicons-content.js  pancake.css  private-browsing-felipe.css
data/js/lib/micropilot/: package.json
extra/: d3promise.js  fonts.css  stats.css  stats.js
html/: catgifs.html  devtools.html
lib/: background.js  blank.js  button.js  clear-search.js  coin.js  debounce.js  dinohome.js  etherpad.js  hamburger.js  invincible.js  lionel.js  main.js  mario.js  micropilot.js  newtabicons.js  nope.js  notify.js  panelicons.js  ponami-image.js  ponami.js  private-felipe.js  spinner.js  throbber.js  urlbar.js  xulcss.js
lib/jetpack-protocol/: History.md  Readme.md  package.json  protocol.js  uri.js  xpcom.js
lib/jetpack-protocol/examples/: about-async.js  about-redirect.js  uri-async.js  uri-map-data.js  uri-redirect.js  uri-unbelievable.js
lib/micropilot/lib/: micropilot.js
newtab-page/: newtab-content.css  newtab-skin.css  newtab.html
scripts/: newtab.js  textDoc.js
scripts/background-scripts/: mario.js  urlbar.js
settings/: options.css  options.html  options.js
src/: main.rs  newtab.js
(+3 files in other folders)
