[package]
name = "checklinks"
version = "0.1.0"
authors = ["Blake Winton <bwinton@latte.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.6"
failure_derive = "0.1.6"
rayon = "1.2.0"
reqwest = "0.9.22"